tests/warn/param-hello.jo
param newLine: String

def foo() =
  print
    "Hello, world!" + newLine

def bar() = foo

def main receives jo.IO.stdout = bar    // error
